src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DynamicResourceExtension.xaml


<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        xmlns:sys="clr-namespace:System;assembly=Mscorlib" xmlns:MappingPIGen1="clr-namespace:System;assembly=Mscorlib">

    <Canvas.Resources>
        <sys:Int32 x:Key="myInt32">12</sys:Int32>
    </Canvas.Resources>

    <Button Margin="{DynamicResource ResourceKey=myInt32}" />

</Canvas>
